argo/clusters/eks-demo-tsh/applications/argo-workflows/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: "alb"
      alb.ingress.kubernetes.io/backend-protocol: HTTPS
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
      alb.ingress.kubernetes.io/group.name: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
    name: argo-workflows
    namespace: argo-workflows
  spec:
    rules:
    - host: argo-workflows.devops-sandbox.aws.tsh.io
      http:
        paths:
        - path: /
          backend:
            service:
              name: argo-workflows-release-server
              port:
                number: 443
          pathType: Prefix
    tls:
    - hosts:
      - argo-workflows.devops-sandbox.aws.tsh.io
